objects/UNITY_Account_Pricing_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>UNITY_Broad__c</fullName>
        <label>Broad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Docks</fullName>
                </value>
                <value>
                    <fullName>Doors</fullName>
                </value>
                <value>
                    <fullName>Fence &amp; Gates</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>General Maintenance</fullName>
                </value>
                <value>
                    <fullName>Glass</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>MHE</fullName>
                </value>
                <value>
                    <fullName>Planned Maintenance</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Waste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Business_Unit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Pricing Matrix</relationshipLabel>
        <relationshipName>Account_Pricing_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UNITY_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Craft</fullName>
                </value>
                <value>
                    <fullName>MNS</fullName>
                </value>
                <value>
                    <fullName>MSP Atlanta</fullName>
                </value>
                <value>
                    <fullName>MSP Dallas</fullName>
                </value>
                <value>
                    <fullName>MSP El Paso</fullName>
                </value>
                <value>
                    <fullName>MSP Houston</fullName>
                </value>
                <value>
                    <fullName>MSP Jacksonville</fullName>
                </value>
                <value>
                    <fullName>MSP Memphis</fullName>
                </value>
                <value>
                    <fullName>MSP Miami</fullName>
                </value>
                <value>
                    <fullName>MSP Nashville</fullName>
                </value>
                <value>
                    <fullName>MSP New Orleans</fullName>
                </value>
                <value>
                    <fullName>MSP Orlando</fullName>
                </value>
                <value>
                    <fullName>MSP Phoenix</fullName>
                </value>
                <value>
                    <fullName>MSP San Antonio</fullName>
                </value>
                <value>
                    <fullName>MSP Tampa</fullName>
                </value>
                <value>
                    <fullName>NSBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UNITY_Cost_Plus__c</fullName>
        <label>Cost Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>UNITY_Customer_Size__c</fullName>
        <label>Customer Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tiny</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Huge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Pricing Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UNITY_Broad__c</columns>
        <columns>UNITY_Business_Unit__c</columns>
        <columns>UNITY_Business_Unit_Account__c</columns>
        <columns>UNITY_Cost_Plus__c</columns>
        <columns>UNITY_Customer_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APM-{0000000000}</displayFormat>
        <label>Account Pricing Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Pricing Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>